objects/maps__AssignmentPlan__c.object
<CustomObject>
    <fields>
        <fullName>maps__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CustomAssignmentField__c</fullName>
        <label>Custom Assignment Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DebugMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the assignment plan will run in debug mode or not.</description>
        <label>Debug Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DebugSObjectField__c</fullName>
        <description>The api name of the lookup field that the debug auto assignment object points to. The field reference is used when creating debug auto assignment records.</description>
        <label>Debug SObject Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__IsProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the assignment plan is currently processing or not.</description>
        <label>Is Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LastBatchId__c</fullName>
        <label>Last Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastSuccessfulBatchRun__c</fullName>
        <label>Last Successful Batch Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__LatField__c</fullName>
        <description>The api name of the latitude field on the associated sobject which will be used to determine territory intersection.</description>
        <label>Latitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LngField__c</fullName>
        <description>The api name of the longitude field on the associated sobject which will be used to determine territory intersection.</description>
        <label>Longitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__NumBatches__c</fullName>
        <label>Number of Batches Processed Last Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ReassignOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassign Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__RuleLookupField__c</fullName>
        <label>Assignment Rule Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__SOQLFilter__c</fullName>
        <label>SOQL Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__SObject_Name__c</fullName>
        <description>The label of the sobject associated with this plan.</description>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__SObject__c</fullName>
        <description>The api name of the sobject associated with this plan.</description>
        <label>SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Assignment Plan</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Maps Assignment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Assignment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>